crates/tokmd-tokeignore/tests/snapshots/snapshots__template_go.snap
---
source: crates/tokmd-tokeignore/tests/snapshots.rs
expression: content
---
# .tokeignore (Go)
vendor/
**/vendor/
bin/
**/bin/

# tokmd outputs
.runs/
**/.runs/
