crates/tokmd-tokeignore/tests/snapshots/snapshots__template_node.snap
---
source: crates/tokmd-tokeignore/tests/snapshots.rs
expression: content
---
# .tokeignore (Node)
node_modules/
**/node_modules/
dist/
**/dist/
out/
**/out/
build/
**/build/
coverage/
**/coverage/

# tokmd outputs
.runs/
**/.runs/
