crates/tokmd-tokeignore/tests/snapshots/snapshots__template_python.snap
---
source: crates/tokmd-tokeignore/tests/snapshots.rs
expression: content
---
# .tokeignore (Python)
__pycache__/
**/__pycache__/
*.pyc
.venv/
**/.venv/
venv/
**/venv/
.tox/
**/.tox/
.pytest_cache/
**/.pytest_cache/
htmlcov/
**/htmlcov/
.coverage

# tokmd outputs
.runs/
**/.runs/
